@@ -6,7 +6,7 @@ Available constructor:
 
 Parameters
 ----------
-collProc :  :class:`~openturns.ProcessCollection`
+collProc : sequence of :class:`~openturns.Process`
     Collection of processes which all have the same spatial dimension.
 
 Notes
@@ -26,10 +26,7 @@ Create an aggregated process:
 >>> myMesh = myMesher.build(myInterval)
 >>> myProcess1 = ot.WhiteNoise(ot.Normal(), myMesh)
 >>> myProcess2 = ot.WhiteNoise(ot.Triangular(), myMesh)
->>> myProcColl = ot.ProcessCollection()
->>> myProcColl.add(myProcess1)
->>> myProcColl.add(myProcess2)
->>> myAggregatedProcess = ot.AggregatedProcess(myProcColl)
+>>> myAggregatedProcess = ot.AggregatedProcess([myProcess1, myProcess2])
 
 Draw one realization:
 
@@ -84,6 +81,17 @@ For example, if :math:`X_0=(X_0^0, X_0^1)`, :math:`X_1=(X_1^0, X_1^1)` and :math
 
 Parameters
 ----------
+collProc : sequence of :class:`~openturns.Process`
+    Collection of processes which all have the same spatial dimension.
+"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::AggregatedProcess::getProcessCollection
+"Get the collection of processes.
+
+Returns
+-------
 collProc : :class:`~openturns.ProcessCollection`
     Collection of processes which all have the same spatial dimension.
 "
