@@ -1,2 +1,1 @@
 // SWIG file UncertaintyProcessTemplateDefs.i
-%template(ProcessCollection) OT::Collection<OT::Process>;
